<resources>
    <string name="app_name">Food Allergy App</string>
    <string name="dashboard">Food &amp; Allergy Scanner</string>
    <string name="name">Food Allergy Team</string>
    <string name="email">Email</string>
    <string name="menu_logout">About Us</string>
    <string name="user">User</string>
    <string name="FoodScan">Food Scanner</string>
    <string name="FoodAllEllergy">All Food Allergies</string>
    <string name="Search">Search</string>
    <string name="help">Help</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="backpresstoexit">Please click BACK again to exit</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="scanner">Scanner</string>
    <string name="scannerAndRec">Scanner And Recommendations</string>
    <string name="Food">Foods And Nutrition</string>
    <string name="JohnCotter">Food Allergy Team</string>
    <string name="emailJohn">nithinb@umich.edu</string>
    <string name="aboutFoodAllergies">Food allergies occur when the body\'s immune system reacts to certain proteins in food. Food allergic reactions vary in severity from mild symptoms involving hives and lip swelling to severe, life-threatening symptoms, often called anaphylaxis, that may involve fatal respiratory problems and shock</string>
    <string name="pleaseWait">Please Wait !!</string>
    <string name="title">Title</string>
    <string name="profile">My Profile</string>
    <string name="fatherName">Father Name</string>
    <string name="father">John Battrte</string>
    <string name="phone">Contact No.</string>
    <string name="dob">Date Of Birth</string>
    <string name="mob">+1 9988776655</string>
    <string name="dob1">12-04-1990</string>
    <string name="address">Address</string>
    <string name="address1">Farmington hills, Michigan USA</string>
    <string name="bloodGroup">Bood Group</string>
    <string name="ab">AB+</string>
    <string name="appVersion">App Version : 1.0.1</string>
    <string name="FoodEllergy">Food Allergies</string>
    <string name="FoodsAndNutrition">Foods And Nutrition</string>
    <string name="RECOMMENDATIONS">RECOMMENDATIONS ON FOOD PRODUCTS</string>
    <string name="DAIRY_PRODUCIS">DAIRY \n PRODUCTS</string>
    <string name="REC">RECOMMENDATIONS</string>
    <string name="soyaMilk">SOYA MILK</string>
    <string name="riceMilk">RICE MILK</string>
    <string name="OATMilk">OAT MILK</string>
    <string name="ALMONODMilk">ALMONO MILK</string>
    <string name="HAZELNUT">HAZELNUT MILK</string>
    <string name="COCONUT">COCONUT MILK</string>
    <string name="POTATO">POTATO MILK</string>
    <string name="MEAT_PRODUCIS">MEAT \n PRODUCTS</string>
    <string name="BARED_PRODUCIS">BAKED \n PRODUCTS</string>
    <string name="MyALLERGIES">MY ALLERGIES</string>
    <string name="FoodALLERGIES">FOOD ALLERGIES</string>
    <string name="TypeOfFoodAllergies">ALL TYPES OF FOOD ALLERGIES</string>
    <string name="ANAPHYLAXIS">ANAPHYLAXIS</string>
    <string name="Hives">HIVES</string>
    <string name="Flushedskinorrash">FLUSHED SKIN OR RASH</string>
    <string name="Coughingorwheezing">COUGHING OR WHEEZING</string>
    <string name="DIZZINESSANDORLIGHTHEADEDNESS">DIZZINESS AND/OR LIGHTHEADEDNESS</string>
    <string name="SWELLINGOF">SWELLING OF THE THROAT AND VOCAL CORDS</string>
    <string name="DIFFICULTYBREATHING">DIFFICULTY BREATHING</string>
    <string name="Height">Height</string>
    <string name="weight">Weight</string>
    <string name="FoodResult">Food Result</string>
    <string name="FoodProductBar">FOOD PRODUCT : PEANUT BAR</string>
    <string name="ALLERGIES">ALLERGIES</string>
    <string name="SIMPTOMS">SYMPTOMS ASSOCIATED"</string>
    <string name="SkinProb">SKIN \n REACTIONS</string>
    <string name="DIGESTIVE">DIGESTIVE \n PROBLEMS</string>
    <string name="GETRESULT">GET INSTANT RESULT</string>
    <string name="chooseAction">Choose an action</string>
    <string name="camera">Camera</string>
    <string name="gettingDetails">Getting Food Details...!!</string>
    <string name="search_book_hint">Search Food / Allergies</string>
    <string name="about">About Us</string>
    <string name="appName">App Name</string>
    <string name="dash">:</string>
    <string name="add">Add</string>
    <string name="MyProfile">My Profile</string>
    <string name="camera_permission">Food Allergy Application wants to access your Camera</string>
    <string name="camera_per">Camera Permission</string>
    <string name="denied">Denied</string>
    <string name="allow">Allow</string>
    <string name="cow_milk">COW MILK</string>
    <string name="peanut">Peanuts</string>
</resources>