<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/rounded_border_for_message"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/camera_per"
            android:textColor="@color/dark_red"
            android:textSize="15sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:textSize="15dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/tv_school_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/camera_permission"
                android:textColor="@color/colorPrimary"
                android:textSize="15dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/btn_denied"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="0.5"
                android:backgroundTint="@color/dark_red"
                android:text="@string/denied"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_allow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="0.5"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/allow"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
