<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.ProfileActivity">

    <include
        layout="@layout/custom_toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp">

                        <View
                            android:id="@+id/view"
                            android:layout_width="match_parent"
                            android:layout_height="620dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="bottom"
                            android:orientation="vertical"
                            android:padding="25dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="24dp"
                                android:text="Name"
                                android:textSize="9dp" />

                            <TextView
                                android:id="@+id/tv_motherName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/mother"
                                android:drawablePadding="10dp"
                                android:gravity="center_vertical"
                                android:text="Food Allergy Team" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_gravity="start|center_vertical"
                                android:layout_margin="10dp"
                                android:layout_marginStart="10dp"
                                android:background="@color/light_gray" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="24dp"
                                android:text="@string/phone"
                                android:textSize="9dp" />

                            <TextView
                                android:id="@+id/tv_phoneNumber"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawablePadding="10dp"
                                android:gravity="center_vertical"
                                android:text="+19473360379"
                                app:drawableLeftCompat="@drawable/shape_1" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_gravity="left|center_vertical"
                                android:layout_margin="10dp"
                                android:layout_marginLeft="10dp"
                                android:background="@color/light_gray" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="24dp"
                                android:text="@string/dob"
                                android:textSize="9dp" />

                            <TextView
                                android:id="@+id/tv_DOB"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/dob"
                                android:drawablePadding="10dp"
                                android:gravity="center_vertical"
                                android:text="@string/dob1" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_gravity="start|center_vertical"
                                android:layout_margin="10dp"
                                android:layout_marginLeft="10dp"
                                android:background="@color/light_gray" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="24dp"
                                android:text="@string/email"
                                android:textSize="9dp" />

                            <TextView
                                android:id="@+id/tv_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/phone"
                                android:drawablePadding="10dp"
                                android:gravity="center_vertical"
                                android:text="@string/emailJohn" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_gravity="left|center_vertical"
                                android:layout_margin="10dp"
                                android:layout_marginLeft="10dp"
                                android:background="@color/light_gray" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="24dp"
                                android:text="@string/address"
                                android:textSize="9dp" />

                            <TextView
                                android:id="@+id/tv_schoolAddress"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/address_new"
                                android:drawablePadding="10dp"
                                android:gravity="center_vertical"
                                android:text="@string/address1" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_gravity="left|center_vertical"
                                android:layout_margin="10dp"
                                android:layout_marginLeft="10dp"
                                android:background="@color/light_gray" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="24dp"
                                android:text="@string/bloodGroup"
                                android:textSize="9dp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/blood_group"
                                android:drawablePadding="10dp"
                                android:gravity="center_vertical"
                                android:text="@string/ab" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_gravity="left|center_vertical"
                                android:layout_margin="10dp"
                                android:layout_marginLeft="10dp"
                                android:background="@color/light_gray" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="24dp"
                                android:text="@string/Height"
                                android:textSize="9dp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/mother"
                                android:drawablePadding="10dp"
                                android:gravity="center_vertical"
                                android:text="179.8 cm" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_gravity="left|center_vertical"
                                android:layout_margin="10dp"
                                android:layout_marginLeft="10dp"
                                android:background="@color/light_gray" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="24dp"
                                android:text="@string/weight"
                                android:textSize="9dp" />

                            <TextView
                                android:id="@+id/tv_blood_group"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/mother"
                                android:drawablePadding="10dp"
                                android:gravity="center_vertical"
                                android:text="85kg" />



                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <com.mikhaellopez.circularimageview.CircularImageView
                            android:id="@+id/iv_CircularImageViewProfile"
                            android:layout_width="160dp"
                            android:layout_height="160dp"
                            android:src="@drawable/dummy_user"
                            app:civ_border_color="@color/light_gray"
                            app:civ_border_width="2dp"
                            app:civ_shadow="false"
                            app:civ_shadow_color="@color/colorPrimary"
                            app:civ_shadow_radius="8dp" />

                        <LinearLayout
                            android:id="@+id/iv_change_DP"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right|bottom"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp"
                            android:background="@drawable/profile_edit_button"
                            android:orientation="horizontal"
                            android:visibility="visible">

                        </LinearLayout>

                    </FrameLayout>

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:text="@string/JohnCotter"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        android:textStyle="bold" />
                </LinearLayout>

            </FrameLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>